# llm

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: python-static.yml  python-tests.yml
llm/: __init__.py  constants.py  transformer.py
llm/data/: __init__.py  loaders.py  registry.py
llm/data/tests/: test_loaders.py  test_registry.py
llm/layers/: __init__.py  base.py  block.py  block_stack.py  embedding.py  feed_forward.py  image_embedding.py  layer_norm.py  linear.py  multi_head_attention.py  text_embedding.py
llm/layers/tests/: test_block.py  test_block_stack.py  test_embedding.py  test_feed_forward.py  (+5 more)
llm/loss/: __init__.py  cross_entropy.py
llm/models/: __init__.py  base.py  transformer.py  vision_transformer.py
llm/optimizers/: __init__.py  adam.py  base.py  sgd.py
llm/tests/: test_train.py  test_train_feed_forward.py  train_shakespeare.py
llm/tokenizers/: __init__.py  base.py  basic_tokenizer.py  basic_tokenizer_example.py  bpe.py  frequencies.pyx  helpers.pyx  merge.pyx  pair_example.py  pytoken.py  regex_tokenizer.py  regex_tokenizer_dev.py  regex_tokenizer_example.py  split_pattern.py  stdtoken.pxd  stdtoken.pyx  tiktoken_example.py
llm/utils/: __init__.py  math.py
scripts/: convert_tiktoken.py  download_and_split_data.py  download_cifar_10.py  download_pretrained_weights.py  evaluate_model.py  generate_text.py  tokenize_splits.py  train_cifar_10.py  train_model.py  train_tokenizer.py
serving/: client.py  server.py
(+32 files in other folders)
